# code

./: .gitignore  AllCodingQuestions.md  AllCodingQuestions2.md
C++/: Main.cpp  header.h  prettyprint.h  tempCodeRunnerFile.cpp  test.py
C++/C++20/: Ranges.h
C++/array/: AllSorts.h  ArrangePositiveNegativeNumbers.h  BinaryArrSort.h  BinaryTreeOddEvenLevelSum.h  CanJumpToReachOfArray.h  CoinCombination.h  CountSmallerElementsOnRight.h  FindCommonElementsAcrossMultipleArrays.h  FindElementInArray.h  FindInsertPositionInSortedArray.h  FindMissingAndRepeatingNumberInRange.h  FindMissingNumberInString.h  FindMissingNumbersAndFreqOfElementsInRange1ToN.h  GenerateNextPrevNumbersFromArr.h  InversionCount.h  (+29 more)
Java/: Main.java  tempCodeRunnerFile.java
ML/: fbprophet.ipynb  sklearn.ipynb  streamlit_test.py
Python/: find_repeating_substring.py  isomorphic_strings.py  llm1.py  longestsequenceofequalnumberofzerosandones.py  maze.py  parse_csv.py  parse_csv_1.py  parse_data.py  parse_data_2.py  tempCodeRunnerFile.py  text_embedding.py
rust/: dyntrait  dyntrait.rs  enumtest  factorial  factorial.rs  file  file.rs  fizzbuzz  fizzbuzz.rs  higherorderfn  higherorderfn.rs  struct  struct.rs  testpractice.rs
rust/testapp/: Cargo.toml
rust/testapp/src/: async1.rs  async2.rs  async3.rs  binary_search_tree.rs  closures_test.rs  datatypes.rs  helpers.rs  lrucache.rs  main.rs  samplecode.rs  sleep.html  tempCodeRunnerFile.rs  tester.rs  webserver.rs  webserver2.rs
rust/testapp/tests/: unit_tests.rs
rust_practice_only/: ownership  ownership.rs
systemdesign/: SystemDesignLinks.md
(+907 files in other folders)
