[package]
name = "testapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
phf = "0.11.2"
hyper = { version = "0.14.12", features = ["server"] }
futures = "0.3.30"
async-std = "1.12.0"